# anchor

./: .gitignore  CMakeLists.txt  ConditionTree.h  README.md  factdb.c  factdb.h  script.sh
include/: arena.h  arena_internal.h  bytecode.h  common.h  engine.h  factdb.h  factdb_internal.h  jsonParser.h  lexer.h  rule.h
src/: ActionEntry.c  ActionEntry.h  ConditionTree.c  ConditionTree.h  arena.c  arena.h  bytecode.c  engine.c  engine.h  factdb.c  jsonParser.c  jsonParser.h  lexer.c  lexer.cpp  lexer.h  rule.c  rule.h  semanticChecker.c  semanticChecker.h  test.json  testFuncs.c
src/engine/: ActionEntry.c  ConditionTree.c  arena.c  bytecode.c  engine.c  factdb.c  jsonParser.c  rule.c  semanticChecker.c  testFuncs.c
src/velang/: ast.ts  lexer.cpp  lexer.ts  package-lock.json  package.json  toBytecode.ts  tsconfig.json
